# catan

./: .gitignore  Cargo.toml  README.md
src/: core.rs  lib.rs  main.rs  shader.wgsl
src/core/: bank.rs  board.rs  development_card.rs  game_manager.rs  game_state.rs  pieces.rs  player.rs  resource.rs  rules.rs  tile.rs
src/core/player/: player.rs
