[package]
name = "catan"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.103"
env_logger = "0.11.11"
log = "0.4.33"
pollster = "0.4.0"
rand = "0.10.1"
wgpu = "30.0.0"
winit = "0.30.12"

[dependencies.uuid]
version = "1.20.0"
# Lets you generate random UUIDs
features = [
    "v4",
]
